Basic personal page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-Hi! I am Sanjeev
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sanjeev Subrahmaniyan | IIT Madras</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: #20232a;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+    section {
+      padding: 2rem 1.5rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #20232a;
+      margin-top: 2rem;
+    }
+    .contact a {
+      color: #007acc;
+    }
+    footer {
+      background: #20232a;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Sanjeev Subrahmaniyan S B</h1>
+    <p>B.Tech Electrical Engineering @ IIT Madras | Embedded Systems | Research | Programming</p>
+  </header>
+
+  <section class="contact">
+    <p><strong>Email:</strong> <a href="mailto:ee23b102@smail.iitm.ac.in">ee23b102@smail.iitm.ac.in</a></p>
+    <p><strong>Phone:</strong> +91 8760783344</p>
+    <p><strong>Location:</strong> Cauvery Hostel, IIT Madras, India</p>
+  </section>
+
+  <section>
+    <h2>Education</h2>
+    <p><strong>Indian Institute of Technology, Madras</strong><br>
+    B.Tech in Electrical Engineering (Aug 2023 – May 2027)<br>
+    </p>
+  </section>
+
+  <section>
+    <h2>Engineering Highlights</h2>
+    <p><strong>MITRE Embedded CTF</strong>: Developed embedded firmware (AES, HMAC, fault injection, side-channel analysis); placed 7th globally.</p>
+    <p><strong>Team Anveshak, CFI</strong>: Developed motor drivers and steering systems on ESP32 using Python/C and ROS; cut hardware costs by 50%.</p>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <p><strong>Languages:</strong> Python, C, Verilog, ARM/AVR Assembly, Rust, Bash</p>
+    <p><strong>Tools:</strong> Linux, Keil µVision, EasyEDA, Vivado, iVerilog, GTKWave, ROS, STM32CubeIDE, LTSpice</p>
+  </section>
+
+  <section>
+    <h2>Honors & Awards</h2>
+    <ul>
+      <li>JEE Advanced AIR 694</li>
+      <li>KVPY Fellow – IISc Bangalore</li>
+      <li>NTSE Scholar – Govt. of India</li>
+      <li>World Science Scholar – World Science Festival, NY</li>
+      <li>Best Outgoing Student – Shrishti Vidyashram</li>
+      <li>Saathi Mentor, IIT Madras</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Sanjeev Subrahmaniyan S B | IIT Madras</p>
+  </footer>
+
+</body>
+</html>
+
